fix new article animation to not overflow on creation button

--- a/View/assets/home.css
+++ b/View/assets/home.css
@@ -49,6 +49,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: 2;
+    background-color: white;
 }
 
 .home-article-container{
